# rag-agent-harness

./: .gitignore  LICENSE  README.md  eval_cases.json  eval_feynman_cases.public.json  eval_kb_cases.public.json  kb_sources.example.toml  pyproject.toml
.github/workflows/: ci.yml
artifacts/: eval_report.json  kb_eval_report.public.json
docs/: adding-eval-cases.md  citation-accuracy-fix.md  citation-recall-gap.md  engineering-log.md  real-kb-case-study.md
rag_harness/: __init__.py  agent.py  cli.py  evaluation.py  evaluation_v3.py  feynman_evaluation.py  privacy.py  retrieval.py  retrieve.py  sources.py  sync.py  trace.py
sample_docs/: api_limits.md  incident_response.md  knowledge_workflow.md  release_policy.md  security_policy.md
tests/: test_harness.py  test_v3.py
